--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "typescript": "^3.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.12",
     "@types/next": "^7.0.6",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^5.12.0",
     "jest": "^23.6.0",
-    "jest-dom": "^3.0.0",
     "nodemon": "^1.18.9",
     "react-testing-library": "^5.4.4",
     "ts-jest": "^23.10.5",
